# stk

./: CMakeLists.txt  README.md  files.cmake  main.cpp  stk.cpp  stk.h  stk.qrc  stk.ui
